# project-template-generator

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: config.py  llm_service.py  main.py  prompts.py
