[tool.poetry]
name = "project-template-generator"
version = "0.1.0"
description = ""
authors = ["Jose Laruta <eduardo.laruta@gmail.com>"]
readme = "README.md"
packages = [{include = "project_template_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.99.1"
uvicorn = "^0.23.2"
langchain = "^0.0.262"
python-dotenv = "^1.0.0"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
